--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
                                 <div style="width:1%"></div>
                                 <div style="width:61%" class="">
                                     <i style="font-size:3.9vw;line-height:3.8vw;" class="flaticon-quotation"></i>
-                                    <h3 style="font-size:1.7vw;line-height:3.5vw">I have personally worked with the Yuva students from the Rajalakshmi Engineering College (REC) - Yuva club in multiple occassion during my leadership stint at Yi Chennai Chapter.  
+                                    <h3 style="font-size:1.7vw;line-height:3.5vw">I have personally worked with the Yuva students from the Rajalakshmi Engineering College (REC) - Yuva club in multiple occasion during my leadership stint at Yi Chennai Chapter.  
 
                                         The students are very methodical and disciplined. They take good care in planning and organizing the REC projects and events. They were also very forthcoming and proactive when it comes to Yuva participation in all the Yi Chennai led events. 
                                         
