--- a/team.html
+++ b/team.html
@@ -921,7 +921,7 @@
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
                                         <div class="wow fadeInUp hover-content" data-wow-delay="1s">
                                             <a onclick="openPopup1()" class="cat-btn">Click</a>
-                                            <h4 onclick="openPopup1()">Unveil YUVA's Power</h4>
+                                            <h4 onclick="openPopup1()">Reveal the Might of YUVA</h4>
                                         </div>
                                     </div>
                                     <div class="overlay" id="overlay1"></div>
@@ -1486,7 +1486,7 @@
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
                                         <div class="wow fadeInUp hover-content" data-wow-delay="1s">
                                             <a onclick="openPopup2()" class="cat-btn">Click</a>
-                                            <h4 onclick="openPopup2()">Unveil YUVA's Power</h4>
+                                            <h4 onclick="openPopup2()">Reveal the Might of YUVA</h4>
                                         </div>
                                     </div>
                                     <div class="overlay"id="overlay2"></div>
@@ -2109,7 +2109,7 @@
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
                                         <div class="wow fadeInUp hover-content" data-wow-delay="1s">
                                             <a onclick="openPopup3()"class="cat-btn">Click</a>
-                                            <h4 onclick="openPopup3()">Unveil YUVA's Power</h4>
+                                            <h4 onclick="openPopup3()">Reveal the Might of YUVA</h4>
                                         </div>
                                     </div>
                                     <div class="overlay" id="overlay3"></div>
