--- a/index.html
+++ b/index.html
@@ -1345,8 +1345,8 @@
     </div>
 
     <div id="back-to-top" onclick="redirectToSpotify()">
-        <img src="assets/images/podcast/spotify.png" alt="">
-        Check out our Spotify
+        <img src="assets/images/podcast/spotify.svg" alt="">
+        Check out our Podcast
     </div>
 
 
