update index.html podcast

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             margin: 0;
             padding: 0;
             line-height: 1.6;
+            position: relative;
         }
 
         #content {
@@ -38,11 +39,12 @@
             position: fixed;
             bottom: 20px;
             left: 20px;
-            background-color: #007BFF;
+            background-color: rgb(89 , 86 , 233);
             color: #fff;
             padding: 10px;
             border-radius: 5px;
             cursor: pointer;
+            z-index: 9999;
         }
 
         #back-to-top img {
@@ -1445,7 +1447,7 @@
             }
     
             function redirectToSpotify() {
-                window.location.href = "https://open.spotify.com/show/13OYvzZo5LqlA2pmu5EN9J?si=ff21e2c791a64fc6";
+                window.location.href = "podcast.html";
             }
         </script>
     
