--- a/reg.html
+++ b/reg.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div align="center" class="col-lg-12 justify-content-center">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrccM_pIwKL6wt6zx-M4uF75mn1OlmcRFwxhBTQTJXKVWNsw/viewform?embedded=true" width="640" height="1990" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrccM_pIwKL6wt6zx-M4uF75mn1OlmcRFwxhBTQTJXKVWNsw/viewform?embedded=true" width="640" height="auto" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div> 
                 </div>   
         </section>
