--- a/index.html
+++ b/index.html
@@ -183,14 +183,36 @@
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
-                                <!--<div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
-                                <!--</div>-->
+                                <div class="img-holder">
+                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Beyond the Resume<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2><span class="sub-title">Membership Drive 2023-24<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
+                                    </div>
+                                    <a href="https://forms.gle/XzBdfYPP3cKiWHcY8" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+<!--            <section class="cta-area cta-area-v1 pt-60">
+                <div class="container-1450" id="reg">
+                    <div class="cta-wrapper dark-blue-bg" >
+                        <div class="row mt-50 justify-content-center align-items-center">
+                            <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
+                                <!--<div class="img-holder">
+                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
+                                <!--</div>-->
+<!--                            </div>
+                            <div class="col-xl-6 col-lg-6" id="register">
+                                <div class="text-wrapper wow fadeInUp ml-15">
+                                    <div class="section-title section-title-white mb-5">
+                                        <h2><span class="sub-title">Beyond the Resume<br><br></span></h2>
                                         <h2 align="left"><span class="fill-text">Elevate your career journey </span> Unlock your potential - <span class="fill-text"> where excellence meets opportunity</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
@@ -199,16 +221,16 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>         -->
             <!--======= End Register Section ======-->
         <!--====== Start About Section ======-->
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
-                <div class="row justify-content-center">
+                <div class="row align-items-center justify-content-center">
                     <br>
                     <div class=" col-lg-6 col-xl-6">
                         <div class="img-holder video-container wow fadeInLeft">
-                            <div style="border-radius: 90px; overflow: hidden;">
+                            <div>
                                 <video autoplay loop muted>
                                     <source src="assets/images/about/vdo.mp4" type="video/mp4">
                                 </video>
@@ -256,7 +278,7 @@
                                         <h2><span class="fill-text">Join us in </span> being the change <span class="fill-text">you want to </span> see.</h2>
                                         <h4 class="sub-title">Enroll for our Membership !</h4>
                                     </div>
-                                    <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
+                                    <a href="https://forms.gle/XzBdfYPP3cKiWHcY8" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
                                 </div>
                             </div>
                         </div>
@@ -1344,7 +1366,7 @@
         </div>
     </div>
 
-    <div id="back-to-top" onclick="redirectToSpotify()">
+    <div class="wow tada" id="back-to-top" onclick="redirectToSpotify()">
         <img src="assets/images/podcast/spotify.svg" alt="">
         Check out our Podcast
     </div>
