--- a/podcast.html
+++ b/podcast.html
@@ -119,7 +119,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7">
                         <div class="page-title text-center">
-                            <h1>YUVA Podcast</h1>
+                            <h1>YUVA REC Podcast</h1>
                             <ul class="breadcrumbs-link">
                                 <!--<li><a href="index.html"></a></li>-->
                                 <li class="active">KUTTY STORY</li>
