updates podcast and gform

--- a/podcast.html
+++ b/podcast.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC PODCAST</title>
+        <title>YUVA REC KUTTY STORY</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
@@ -121,8 +121,8 @@
                         <div class="page-title text-center">
                             <h1>YUVA Podcast</h1>
                             <ul class="breadcrumbs-link">
-                                <li><a href="index.html">Home</a></li>
-                                <li class="active">Podcast</li>
+                                <!--<li><a href="index.html"></a></li>-->
+                                <li class="active">KUTTY STORY</li>
                             </ul>
                         </div>
                     </div>
@@ -134,10 +134,28 @@
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/podcast/12.PNG" alt="Img">
+                                
+                                <a href="https://open.spotify.com/embed/episode/4BZmBDEtZojc1x2EqE9fXe?utm_source=generator&t=0" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                                </div>
+            
+                            <div style="text-align: center;" class="text">
+                                <h3 class="title"><a href="https://open.spotify.com/embed/episode/4BZmBDEtZojc1x2EqE9fXe?utm_source=generator&t=0">The Pursuit of Consistency</a></h3>
+                                <p>Ready to level up?</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
-                                <img src="assets\images/podcast/11.jpg" alt="Img">
+                                <img src="assets\images/podcast/11.PNG" alt="Img">
                                 <a href="https://open.spotify.com/embed/episode/2y9j6nfHmEwMaFaoLrGu87?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -269,7 +287,7 @@
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets\images\portfolio\yuvaneta23.jpg" alt="Img">
+                                <img src="assets\images/podcast/4.PNG" alt="Img">
                                 <a href="https://open.spotify.com/embed/episode/6MFm6qAnrZo7tRJ7uV3x43?utm_source=generator" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
