--- a/reg.html
+++ b/reg.html
@@ -133,13 +133,13 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp" id="register">
-                            <h3>Membership Drive 2023-24</h3>
+                            <h3>Beyond the Resume</h3>
                             <p class="position">Register Now <b>↓</b></p>
                         </div>
                     </div>
                 </div>
                 <div align="center" class="col-lg-12 justify-content-center">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="640" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrccM_pIwKL6wt6zx-M4uF75mn1OlmcRFwxhBTQTJXKVWNsw/viewform?embedded=true" width="640" height="1990" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div> 
                 </div>   
         </section>
