--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
-                                <div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
-                                </div>
+                                <!--<div class="img-holder">
+                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
+                                <!--</div>-->
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Membership Drive 2023-24<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
+                                        <h2><span class="sub-title">Beyond the Resume<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Elevate your career journey </span> Unlock your potential - <span class="fill-text"> where excellence meets opportunity</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
