--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                         <h2><span class="sub-title">Membership Drive 2023-24<br><br></span></h2><!--<span class="fill-text"></span>-->
                                         <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
-                                    <a href="https://forms.gle/XzBdfYPP3cKiWHcY8" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
