--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                         <h2><span class="fill-text">Join us in </span> being the change <span class="fill-text">you want to </span> see.</h2>
                                         <h4 class="sub-title">Enroll for our Membership !</h4>
                                     </div>
-                                    <a href="https://forms.gle/XzBdfYPP3cKiWHcY8" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
+                                    <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register</a>
                                 </div>
                             </div>
                         </div>
