--- a/reg.html
+++ b/reg.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div align="center" class="col-lg-12 justify-content-center">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="auto" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="100%" height="720px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div> 
                 </div>   
         </section>
