--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Tune Your Groove/6.jpg" alt="">
+                                <a href="assets/images/Events/Tune Your Groove/6.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Spread Smiles/4.jpg" alt="">
                                 <a href="assets/images/Events/Spread Smiles/4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -143,8 +151,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Retro Kadhaigal/6.jpg" alt="">
-                                <a href="assets/images/Events/Retro Kadhaigal/6.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
+                                <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -167,8 +175,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
-                                <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Retro Kadhaigal/6.jpg" alt="">
+                                <a href="assets/images/Events/Retro Kadhaigal/6.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -185,6 +193,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Pongal pandigai/img 10.jpg" alt="">
                                 <a href="assets/images/Events/Pongal pandigai/img 10.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Tune Your Groove/2.jpg" alt="">
+                                <a href="assets/images/Events/Tune Your Groove/2.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -255,6 +271,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Tune Your Groove/9.jpg" alt="">
+                                <a href="assets/images/Events/Tune Your Groove/9.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/lumos/2.jpg" alt="">
                                 <a href="assets/images/Events/lumos/2.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -281,6 +305,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Pongal pandigai/img 14.jpg" alt="">
                                 <a href="assets/images/Events/Pongal pandigai/img 14.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Tune Your Groove/12.jpg" alt="">
+                                <a href="assets/images/Events/Tune Your Groove/12.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
