--- a/Initiatives.html
+++ b/Initiatives.html
@@ -164,6 +164,54 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <a href="Event - Road to Safety.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Road to Safety.html">Road to Safety</a></h3>
+                                <a class="cat-link">26/02/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <a href="Event - Eco Champs.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Eco Champs.html">Eco Champs</a></h3>
+                                <a class="cat-link">26/02/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <a href="Event - Beyond the Resume.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Beyond the Resume.html">Beyond the Resume</a></h3>
+                                <a class="cat-link">25/02/2024</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-4 cat-6 cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
