--- a/Initiatives.html
+++ b/Initiatives.html
@@ -167,7 +167,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <img src="assets/images/portfolio/Road to safety.png" alt="Img">
                                 <a href="Event - Road to Safety.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
@@ -183,7 +183,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <img src="assets/images/portfolio/Eco champs.png" alt="Img">
                                 <a href="Event - Eco Champs.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
