event and team updates

--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,30 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Road to safety/16.png" alt="">
+                                <a href="assets/images/Events/Road to safety/16.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Eco champs/g15.png" alt="">
+                                <a href="assets/images/Events/Eco champs/g15.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Beyond the resume/d14.jpeg" alt="">
+                                <a href="assets/images/Events/Beyond the resume/d14.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Tune Your Groove/6.jpg" alt="">
                                 <a href="assets/images/Events/Tune Your Groove/6.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -153,6 +177,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Eco champs/g2.png" alt="">
+                                <a href="assets/images/Events/Eco champs/g2.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -223,6 +255,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Beyond the resume/d23.jpg" alt="">
+                                <a href="assets/images/Events/Beyond the resume/d23.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Smash 2.0/img 8.jpeg" alt="">
                                 <a href="assets/images/Events/Smash 2.0/img 8.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -247,6 +287,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Road to safety/3.png" alt="">
+                                <a href="assets/images/Events/Road to safety/3.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Pongal pandigai/img 8.jpg" alt="">
                                 <a href="assets/images/Events/Pongal pandigai/img 8.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -257,6 +305,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Eco champs/g1.png" alt="">
+                                <a href="assets/images/Events/Eco champs/g1.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -327,6 +383,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Beyond the resume/d34.jpg" alt="">
+                                <a href="assets/images/Events/Beyond the resume/d34.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Pawsitivity/10.png" alt="">
                                 <a href="assets/images/Events/Pawsitivity/10.png" class="portfolio-hover img-popup"></a>
                             </div>
@@ -339,6 +403,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <!--<div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp">
                             <div class="img-holder">
