--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Tune your Groove.jpg" alt="Img">
+                                <img src="assets/images/portfolio/Beyond The Resume.jpg" alt="Img">
                                 <a href="Event - Beyond the Resume.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
