--- a/team.html
+++ b/team.html
@@ -379,7 +379,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
-                                <img src="assets/images/team/trisha.jpeg" alt="">
+                                <img src="assets/images/team/thrisha.jpg" alt="">
                             </div>
                             <div class="text text-center">
                                
