--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <li>
                             <i class="fal fa-phone"></i>
                             <a href="tel:8667060010">Richard - 86670 60010</a>
-                            <a href="tel:6385486230">Siva Santhosh - 63854 86230</a>
+                            
                         </li>
                     </ul>
                 </div>
@@ -323,14 +323,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Road to safety.png" alt="Img">
-                                <a href="Event - Road to Safety.html" class="portfolio-hover">
+                                <a href="Event - A Road to Safety.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Road to Safety.html">Road to Safety</a></h3>
+                                <h3 class="title"><a href="Event - A Road to Safety.html">A Road to Safety</a></h3>
                                 <a class="cat-link">26/02/2024</a>
                             </div>
                         </div>
