--- a/Event - Road Revive.html
+++ b/Event - Road Revive.html
@@ -397,9 +397,10 @@
                         <div class="widget social-widget mb-40 wow fadeInUp" data-wow-delay=".15s">
                             <h4 class="widget-title">Follow</h4>
                             <ul class="social-nav">
-                                <li><a href="https://www.instagram.com/yiciirec/"><i class="fab fa-instagram"></i>Instagram</a></li>
-                                <li><a href="https://youtube.com/@yiyuvarec6604"><i class="fab fa-youtube"></i>Youtube</a></li>
-                                <li><a href="https://www.facebook.com/youngindiansrec"><i class="fab fa-facebook"></i>Facebook</a></li>
+                                <li><a href="https://www.instagram.com/yiciirec/"><i class="fab fa-instagram"></i> Instagram</a></li>
+                                <li><a href="https://open.spotify.com/show/13OYvzZo5LqlA2pmu5EN9J"><i class="fab fa-spotify"></i> Spotify</a></li>
+                                <li><a href="https://youtube.com/@yiyuvarec6604"><i class="fab fa-youtube"></i> Youtube</a></li>
+                                <li><a href="https://www.facebook.com/youngindiansrec"><i class="fab fa-facebook"></i> Facebook</a></li>
                             </ul>
                         </div>
                     </div>
