--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -362,7 +362,7 @@
                             <p>Yuvaneta'23 has been honored with the prestigious award for the Most Innovative Event. We celebrate not only the recognition of our efforts but also the spirit of collaboration and forward-thinking that defines our community.<br><br></p>
                             <div class="author-quote-title d-flex">
                                 <div class="author-title">
-                                    <h4>Most Initiative Event</h4>
+                                    <h4>Most Innovative Event</h4>
                                     <p class="position">2023</p>
                                 </div>
                             </div>
