--- a/team.html
+++ b/team.html
@@ -670,7 +670,7 @@
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Rohit Kumar R</a></h4>
+                                <h4><a><br>Rohith Kumar R</a></h4>
                                 <p class="position">Human Resources</p>
                             </div>
                         </div>
@@ -718,7 +718,7 @@
                             </div>
                             <div class="text text-center">
                                
-                                <h4><a><br>Shreya Mirdhula G</a></h4>
+                                <h4><a><br>Shreya Mridula G</a></h4>
                                 <p class="position">MMT</p>
                             </div>
                         </div>
