--- a/Event - Eco Champs.html
+++ b/Event - Eco Champs.html
@@ -347,7 +347,7 @@
                                         <img src="assets/images/portfolio/Road to safety.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Road to Safety.html">Road to Safety</a></h4>
+                                        <h4><a href="Event - Road to Safety.html">A Road to Safety</a></h4>
                                         <p>February 2024</p>
                                     </div>
                                 </div>
