--- a/Event - Polish.html
+++ b/Event - Polish.html
@@ -146,11 +146,7 @@
                                 <div class="text">
                                     <h3 class="title">Polish</h3>
                                     <p class="position">11th April 2024</p>
-                                    <p align="justify">"Nurturing eco-conscious champions: where knowledge meets creativity, seeds of change are sown."
-
-
-                                        The "Eco Champs" event, designed to raise awareness about climate change held on 26th February 2024, effectively engaged students from grades 6 to 9 through educational sessions, engaging illustrations, and creative competitions. Commencing with informative sessions, students were introduced to climate change causes and effects using vivid illustrations and real-world examples. Water warriors - in order to emphasize the importance of saving water in our daily lives, A report card was handed to the students awarding points for their small steps towards the conservation of water. Drawing competition enabled creative expression of thoughts on climate change, while a speech competition provided a platform for articulating solutions and commitments. Prizes were awarded to winners to sustain interest in climate action, and all participants received certificates of participation. This event significantly increased awareness and understanding, empowering a younger generation to address environmental challenges actively.
-                                    </p>
+                                    <p align="justify">"Empowering communities through a meaningful act of service." The members of Yi YUVA REC, organized an event "Polish 1.0" on April 11, 2024, between 7:00 am to 9:00 am, at Arulmigu Sri Sundararaja Perumal Temple, Sitharkadu, Soranjeri, Tamil Nadu. This was a new initiative to stress the importance of cleanliness and beauty in restoring things. The event started by dividing the members into separate groups, each group was assigned to a particular area and that spot was cleaned by them. Our members not only restored the temple but also the divinity within them, which cleansed their soul and their minds. All the trash was collected in a trash bag and disposed properly. There is a saying “Serene places create calm minds, Serene temples create good humans” This was proven true by the members of Yi YUVA REC. Polish 1.0 was an event that left them with a fulfilled heart and cherishable memories to last a lifetime.</p>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +167,7 @@
                             </div>
                             <div class="text">
                                 <h4>Vertical</h4>
-                                <p>Climate Change</p>
+                                <p>Arts and Culture</p>
                             </div>
                         </div>
                     </div>
@@ -183,7 +179,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Students of Karnataka Sangha Higher Secondary School</p>
+                                <p>Yi YUVA REC Members</p>
                             </div>
                         </div>
                     </div>
@@ -194,7 +190,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>Awareness about Climate Change</p>
+                                <p>To stress the importance of restoring things</p>
                             </div>
                         </div>
                     </div>
