--- a/Event - Polish1.0 .html
+++ b/Event - Polish1.0 .html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Polish</title>
+        <title>YUVA REC Polish 1.0</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
@@ -120,7 +120,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Polish</li>
+                                <li class="active">Polish 1.0</li>
                             </ul>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Polish</h3>
+                                    <h3 class="title">Polish 1.0</h3>
                                     <p class="position">11th April 2024</p>
                                     <p align="justify">"Empowering communities through a meaningful act of service." The members of Yi YUVA REC, organized an event "Polish 1.0" on April 11, 2024, between 7:00 am to 9:00 am, at Arulmigu Sri Sundararaja Perumal Temple, Sitharkadu, Soranjeri, Tamil Nadu. This was a new initiative to stress the importance of cleanliness and beauty in restoring things. The event started by dividing the members into separate groups, each group was assigned to a particular area and that spot was cleaned by them. Our members not only restored the temple but also the divinity within them, which cleansed their soul and their minds. All the trash was collected in a trash bag and disposed properly. There is a saying “Serene places create calm minds, Serene temples create good humans” This was proven true by the members of Yi YUVA REC. Polish 1.0 was an event that left them with a fulfilled heart and cherishable memories to last a lifetime.</p>
                                 </div>
@@ -179,7 +179,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Yi YUVA REC Members</p>
+                                <p>Congregation members, Local community members, Families</p>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>To stress the importance of restoring things</p>
+                                <p>Promote cleanliness, Community involvement, and spiritual renewal within the temple premises.</p>
                             </div>
                         </div>
                     </div>
