event minute changes

--- a/Initiatives.html
+++ b/Initiatives.html
@@ -168,14 +168,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Polish.jpg" alt="Img">
-                                <a href="Event - Polish.html" class="portfolio-hover">
+                                <a href="Event - Polish1.0 .html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Polish.html">Polish 1.0</a></h3>
+                                <h3 class="title"><a href="Event - Polish1.0 .html">Polish 1.0</a></h3>
                                 <a class="cat-link">11/04/2024</a>
                             </div>
                         </div>
