--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,22 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Puzzles 2.0/5.jpg" alt="">
+                                <a href="assets/images/Events/Puzzles 2.0/5.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Polish/p6.jpg" alt="">
+                                <a href="assets/images/Events/Polish/p6.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Road to safety/16.png" alt="">
                                 <a href="assets/images/Events/Road to safety/16.png" class="portfolio-hover img-popup"></a>
                             </div>
@@ -175,6 +191,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Polish/p12.jpg" alt="">
+                                <a href="assets/images/Events/Polish/p12.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -201,6 +225,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Yi Annual Day 2023/91.jpeg" alt="">
                                 <a href="assets/images/Events/Yi Annual Day 2023/91.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Puzzles 2.0/3.jpg" alt="">
+                                <a href="assets/images/Events/Puzzles 2.0/3.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
