--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Designify/5.jpg" alt="">
+                                <a href="assets/images/Events/Designify/5.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Puzzles 2.0/5.jpg" alt="">
                                 <a href="assets/images/Events/Puzzles 2.0/5.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -183,6 +191,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Puzzles 2.0/7.jpg" alt="">
+                                <a href="assets/images/Events/Puzzles 2.0/7.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Spread Smiles/4.jpg" alt="">
                                 <a href="assets/images/Events/Spread Smiles/4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -201,6 +217,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Designify/2.jpg" alt="">
+                                <a href="assets/images/Events/Designify/2.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -241,6 +265,14 @@
                             <div class="img-holder">
                                 <img src="assets/images/Events/Retro Kadhaigal/6.jpg" alt="">
                                 <a href="assets/images/Events/Retro Kadhaigal/6.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Designify/3.png" alt="">
+                                <a href="assets/images/Events/Designify/3.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
