--- a/Event - Designify.html
+++ b/Event - Designify.html
@@ -146,7 +146,7 @@
                                 <div class="text">
                                     <h3 class="title">Designi'fy</h3>
                                     <p class="position">17th May 2024</p>
-                                    <p align="justify">17th May 2024
+                                    <p align="justify">
 
                                         Yi Yuva REC conducted Designi'fy, an intensive hands-on workshop focused on design fundamentals using Photoshop, at Rajalakshmi Engineering College. The workshop, led by Sundar N, attracted a diverse group of participants eager to enhance their design skills. He guided attendees through the intricacies of Photoshop, covering everything from importing images to mastering the wide array of tools the software offers. 
                                         
@@ -196,7 +196,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>Unleashing boundless creativity with every stroke and pixel and Bringing visions to life</p>
+                                <p>Unleashing boundless creativity with every brush and pixel and bringing visions to life</p>
                             </div>
                         </div>
                     </div>
