--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </li>
                         <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel:8667060010">Richard - 86670 60010</a>
+                            <a href="tel: 9841937389">Linghesh - 9841937389</a>
                             
                         </li>
                     </ul>
@@ -190,7 +190,7 @@
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Membership Drive 2023-24<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2><span class="sub-title">Membership Drive 2023 - 24<br><br></span></h2><!--<span class="fill-text"></span>-->
                                         <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
@@ -315,6 +315,56 @@
                                 <li data-filter=".cat-11">Sports</li>
                                 <li data-filter=".cat-12">Others</li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0.png" alt="Img">
+                                <a href="Event - CGT 5.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
+                                <a class="cat-link">18/08/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Walk Along 2.0.png" alt="Img">
+                                <a href="Event - Walk Along 2.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Walk Along 2.0.html">Walk Along 2.0</a></h3>
+                                <a class="cat-link">11/08/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/CGT 5.0 REC.png" alt="Img">
+                                <a href="Event - CGT REC.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT REC</a></h3>
+                                <a class="cat-link">25/07/2024</a>
+                            </div>
                         </div>
                     </div>
                 </div>
